# Short-Arc-Space-Object-Tracking

./: .gitignore  README.md  cheat_sheet.md  generate_research_summary_pdf.py  literature_survey.md
short-arc-ai-workspace/: pyproject.toml  run_benchmark.py  run_gnn_vs_jpda_comparison.py  run_live_3d_tracking.py  run_multi_object_demo.py  run_scheduler_demo.py  run_tracking_demo.py  test_adaptive_noise.py  test_conjunction.py  test_edge_cases.py  test_jdpa_high_noise.py  test_jpda_stress.py  test_physics_accuracy.py
short-arc-ai-workspace/data/: fengyun_1c.txt
short-arc-ai-workspace/papers/: notes_milani_2008.md
short-arc-ai-workspace/scripts/: generate_plots.py
short-arc-ai-workspace/src/: constants.py  data_loader.py  tracking_system.py
short-arc-ai-workspace/src/api/: main.py
short-arc-ai-workspace/src/association/: gnn_associator.py  jpda_associator.py
short-arc-ai-workspace/src/classification/: regime_classifier.py
short-arc-ai-workspace/src/orbit_determination/: adaptive_noise.py  ensemble_kalman_filter.py  gauss_iod.py
short-arc-ai-workspace/src/orbital_mechanics/: kepler_utils.py  perturbations.py  propagator.py
short-arc-ai-workspace/src/scheduling/: information_scheduler.py
short-arc-ai-workspace/tests/: test_api.py  test_catalog.py  test_conjunction.py  test_conjunction_full.py  test_data_loader.py  test_enkf.py  test_enkf_update.py  test_full_pipeline.py  test_gauss_iod.py  test_gnn_association.py  test_jpda.py  test_kepler.py  test_maneuver.py  test_propagation.py  test_scenario_generation.py  test_tracking_system.py
(+31 files in other folders)
