[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-guard"
version = "0.1.0"
description = "AI-powered real-time satellite & debris tracking and conjunction assessment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "numba>=0.56.0",
    "skyfield>=1.45",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
